import React from 'react';
import { createTestInstance } from '@magento/peregrine';
import Header from '../header';
import { useHeader } from '@magento/peregrine/lib/talons/Header/useHeader';
import { useQuery } from '@apollo/client';

let mockIsDesktop;

jest.mock('../../../classify');
jest.mock('../../Logo', () => 'Logo');
jest.mock('../accountTrigger', () => 'AccountTrigger');
jest.mock('../cartTrigger', () => 'CartTrigger');
jest.mock('../navTrigger', () => 'NavTrigger');
jest.mock('../searchTrigger', () => 'SearchTrigger');
jest.mock('../onlineIndicator', () => 'OnlineIndicator');
jest.mock('../storeSwitcher', () => 'StoreSwitcher');
jest.mock('../currencySwitcher', () => 'CurrencySwitcher');
jest.mock('../../PageLoadingIndicator', () => () => (
    <div id={'pageLoadingIndicator'} />
));

jest.mock('@magento/peregrine/lib/util/makeUrl');

jest.mock('@magento/peregrine/lib/talons/Header/useHeader', () => {
    const state = {
        handleSearchTriggerClick: jest.fn(),
        hasBeenOffline: false,
        isOnline: true,
        isPageLoading: false,
        searchOpen: false
    };
    return {
        useHeader: jest.fn(() => state)
    };
});

jest.mock('@magento/peregrine', () => {
    const useWindowSize = jest.fn(() => ({
        isDesktop: mockIsDesktop
    }));

    return {
        ...jest.requireActual('@magento/peregrine'),
        useWindowSize
    };
});

jest.mock('react-router-dom', () => ({
    Link: jest.fn(() => null),
    Route: jest.fn(() => null),
    useLocation: jest.fn(() => ({ pathname: '/test.html' }))
}));

jest.mock('@apollo/client');

const givenDefault = () => {
    mockIsDesktop = false;
};

const givenDesktop = () => {
    mockIsDesktop = true;
};

beforeAll(() => {
    useQuery.mockReturnValue({
        data: {
            categoryList: [
                {
                    id: 2,
                    name: 'Default Category',
                    children: [
                        {
                            id: 3,
                            include_in_menu: 1,
                            name: 'Accessories',
                            position: 4,
                            url_path: 'venia-accessories',
                            url_suffix: '.html',
                            children: [
                                {
                                    id: 4,
                                    include_in_menu: 1,
                                    name: 'Belts',
                                    position: 10,
                                    url_path: 'venia-accessories/venia-belts',
                                    url_suffix: '.html',
                                    children: []
                                }
                            ]
                        },
                        {
                            id: 13,
                            include_in_menu: 0,
                            name: 'Dresses',
                            position: 3,
                            url_path: 'venia-dresses',
                            url_suffix: '.html',
                            children: []
                        }
                    ]
                }
            ]
        }
    });
});

beforeEach(() => {
    givenDefault();
});

test('verify Header can render in default mobile state', () => {
    const component = createTestInstance(<Header />);

    expect(component.toJSON()).toMatchSnapshot();
});

test('verify Header can render in default desktop state', () => {
    givenDesktop();
    const component = createTestInstance(<Header />);

    expect(component.toJSON()).toMatchSnapshot();
});

test('verify PageLoadingIndicator is displayed when page is loading', () => {
    useHeader.mockImplementation(() => {
        return {
            handleSearchTriggerClick: jest.fn(),
            hasBeenOffline: false,
            isOnline: true,
            isPageLoading: true,
            searchOpen: false
        };
    });

    const component = createTestInstance(<Header />);
    component.root.findByProps({ id: 'pageLoadingIndicator' });
});
