// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`verify Header can render in default desktop state 1`] = `
Array [
  <div
    className="switchersContainer"
  >
    <div
      className="switchers"
    >
      <StoreSwitcher />
      <CurrencySwitcher />
    </div>
  </div>,
  <header
    className="closed"
  >
    <div
      className="toolbar"
    >
      <div
        className="primaryActions"
      >
        <NavTrigger />
      </div>
      <OnlineIndicator
        hasBeenOffline={false}
        isOnline={true}
      />
      <require('../MegaMenu') />
      <div
        className="secondaryActions"
      >
        <SearchTrigger
          onClick={[MockFunction]}
        />
        <AccountTrigger />
        <CartTrigger />
      </div>
    </div>
  </header>,
]
`;

exports[`verify Header can render in default mobile state 1`] = `
Array [
  <div
    className="switchersContainer"
  >
    <div
      className="switchers"
    >
      <StoreSwitcher />
      <CurrencySwitcher />
    </div>
  </div>,
  <header
    className="closed"
  >
    <div
      className="toolbar"
    >
      <div
        className="primaryActions"
      >
        <NavTrigger />
      </div>
      <OnlineIndicator
        hasBeenOffline={false}
        isOnline={true}
      />
      <div
        className="secondaryActions"
      >
        <SearchTrigger
          onClick={[MockFunction]}
        />
        <AccountTrigger />
        <CartTrigger />
      </div>
    </div>
  </header>,
]
`;
